--- a/01-vpc/Jenkinsfile
+++ b/01-vpc/Jenkinsfile
@@ -13,7 +13,7 @@ pipeline {
         stage('Init') {
             steps {
                 sh """
-                    cd 01-vpc
+                    01-vpc
                     teraform init -reconfigure
                 """
             }
