--- a/01-vpc/Jenkinsfile
+++ b/01-vpc/Jenkinsfile
@@ -9,6 +9,10 @@ pipeline {
         timeout(time: 1, unit: 'HOURS') 
         disableConcurrentBuilds()
     }
+    parameters {
+        choice(name: 'action', choices: ['apply', 'destroy'], description: 'Pick something')
+
+    }
     // build
     stages {
         stage('Init') {
@@ -28,6 +32,13 @@ pipeline {
             }
         }
         stage('Apply') {
+            when {
+                expression { 
+                    params.action == 'apply' 
+                    
+                }
+            }
+            
             input {
                 message "Should we continue?"
                 ok "Yes, we should."
