--- a/01-vpc/Jenkinsfile
+++ b/01-vpc/Jenkinsfile
@@ -11,7 +11,7 @@ pipeline {
     }
     parameters {
         choice(name: 'action', choices: ['apply', 'destroy'], description: 'Pick something')
-
+        
     }
     // build
     stages {
@@ -38,7 +38,7 @@ pipeline {
                     
                 }
             }
-            
+
             input {
                 message "Should we continue?"
                 ok "Yes, we should."
@@ -52,6 +52,32 @@ pipeline {
                   sh """
                     cd 01-vpc 
                     terraform apply -auto-approve
+                """
+                
+            }
+        }
+
+        stage('Destroy') {
+            when {
+                expression { 
+                    params.action == 'destroy' 
+                    
+                }
+            }
+            
+            input {
+                message "Should we continue?"
+                ok "Yes, we should."
+                // submitter "alice,bob"
+                // parameters {
+                //     string(name: 'PERSON', defaultValue: 'Mr Jenkins', description: 'Who should I say hello to?')
+                // }
+            }
+
+            steps {
+                  sh """
+                    cd 01-vpc 
+                    terraform destroy -auto-approve
                 """
                 
             }
